Simplify UI bounds and remove redundant local assignments